[gd_scene load_steps=7 format=2]

[ext_resource path="res://ships/modules/mining-laser/mining-laser.gd" type="Script" id=1]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.435185, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 48.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 90.0
angle_random = 1.0
scale = 2.0
scale_curve = SubResource( 3 )
color = Color( 6, 0, 5, 1 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 96.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 90.0
angle_random = 1.0
scale = 2.0
scale_curve = SubResource( 3 )
color = Color( 6, 0, 5, 1 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
scale = 2.0
color = Color( 6, 0, 5, 1 )

[node name="MiningLaser" type="RayCast2D"]
cast_to = Vector2( 1000, 0 )
script = ExtResource( 1 )

[node name="Laser" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 32, 0 )
width = 4.0
default_color = Color( 4, 0.73, 5, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 4 )

[node name="CollisionParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 5 )

[node name="BeamParticles" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
local_coords = false
process_material = SubResource( 6 )
